--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mason Henson</title>
-    <link rel=styles.css>
+    <link rel="styles.css">
     <meta name="description" content="Whatever is on the website">
     <meta name="keywords" content="Jimi,Hendrix,White,John,Travolta">
     <meta name="author" content="Mason Henson">+
