--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Mason Henson</title>
-    <link rel="styles.css">
     <meta name="description" content="Whatever is on the website">
     <meta name="keywords" content="Jimi,Hendrix,White,John,Travolta">
-    <meta name="author" content="Mason Henson">+
+    <meta name="author" content="Mason Henson">
+  <title>Mason Henson</title>
+  <link rel="styles.css">
   </head>
   <body>
     <header>
